# shinomni

./: .gitignore  Blocks.txt  FourShiftWeeklyRoster.xlsx  LICENSE  README.md  ThreeShiftWeeklyRoster.xlsx  aaml-doctors.csv  app.py  blocks.py  pyproject.toml  raqm.py  schd.py  schd3s.py  schd4s.py  tiradscalc.py  ttx.py  utf.py  utils.py
